@@ -78,7 +78,7 @@
     <lms-sleep-dialog v-if="dialogs.sleep"></lms-sleep-dialog>
     <lms-search-dialog v-if="dialogs.search"></lms-search-dialog>
     <lms-movequeue-dialog v-if="dialogs.movequeue"></lms-movequeue-dialog>
-    <lms-podcast-add-dialog v-if="dialogs.podcastadd"></lms-podcast-add-dialog>
+    <lms-podcast-dialog v-if="dialogs.podcast"></lms-podcast-dialog>
     <lms-podcast-search-dialog v-if="dialogs.podcastsearch"></lms-podcast-search-dialog>
     <lms-info-dialog v-if="dialogs.iteminfo"></lms-info-dialog>
     <lms-iframe-dialog v-if="dialogs.iframe"></lms-iframe-dialog>
@@ -174,7 +174,7 @@
   print("  <script src=\"html/js/sleep-dialog.js?r=$version\"></script>\n");
   print("  <script src=\"html/js/search-field.js?r=$version\"></script>\n");
   print("  <script src=\"html/js/movequeue-dialog.js?r=$version\"></script>\n");
-  print("  <script src=\"html/js/podcast-add-dialog.js?r=$version\"></script>\n");
+  print("  <script src=\"html/js/podcast-dialog.js?r=$version\"></script>\n");
   print("  <script src=\"html/js/podcast-search-dialog.js?r=$version\"></script>\n");
   print("  <script src=\"html/js/info-dialog.js?r=$version\"></script>\n");
   print("  <script src=\"html/js/iframe-dialog.js?r=$version\"></script>\n");
