@@ -144,8 +144,8 @@ sub _cliCommand {
 
     my $cmd = $request->getParam('_cmd');
 
-    if ($request->paramUndefinedOrNotOneOf($cmd, ['info', 'transferqueue', 'favorites', 'map', 'add-podcast', 'edit-podcast', 'delete-podcast', 'plugins',
-                                                  'plugins-status', 'plugins-update', 'delete-vlib', 'pass-isset', 'pass-check', 'browsemodes',
+    if ($request->paramUndefinedOrNotOneOf($cmd, ['info', 'transferqueue', 'favorites', 'map', 'add-podcast', 'edit-podcast', 'delete-podcast', 'podcast-url',
+                                                  'plugins', 'plugins-status', 'plugins-update', 'delete-vlib', 'pass-isset', 'pass-check', 'browsemodes',
                                                   'actions', 'geturl', 'command', 'scantypes', 'server', 'themes', 'playericons', 'activeplayers', 'urls']) ) {
         $request->setStatusBadParams();
         return;
@@ -346,12 +346,15 @@ sub _cliCommand {
         my $pos = $request->getParam('pos');
         my $name = $request->getParam('newname');
         my $origName = $request->getParam('oldname');
-        if (defined $pos && $name && $origName) {
+        my $url = $request->getParam('newurl');
+        my $origUrl = $request->getParam('oldurl');
+        if (defined $pos && $name && $origName && $url && $origUrl) {
             my $podPrefs = preferences('plugin.podcast');
             my $feeds = $podPrefs->get('feeds');
             if ($pos < scalar @{$feeds}) {
-                if (@{$feeds}[$pos]->{'name'} eq $origName) {
+                if (@{$feeds}[$pos]->{'name'} eq $origName && @{$feeds}[$pos]->{'value'} eq $origUrl) {
                     @{$feeds}[$pos]->{'name'}=$name;
+                    @{$feeds}[$pos]->{'value'}=$url;
                     $podPrefs->set(feeds => $feeds);
                     $request->setStatusDone();
                 } else {
@@ -372,6 +375,24 @@ sub _cliCommand {
                 if (@{$feeds}[$pos]->{'name'} eq $name) {
                     splice @{$feeds}, $pos, 1;
                     $podPrefs->set(feeds => $feeds);
+                    $request->setStatusDone();
+                } else {
+                    $request->setStatusBadParams();
+                }
+                return;
+            }
+        }
+    }
+
+    if ($cmd eq 'podcast-url') {
+        my $pos = $request->getParam('pos');
+        my $name = $request->getParam('name');
+        if (defined $pos && $name) {
+            my $podPrefs = preferences('plugin.podcast');
+            my $feeds = $podPrefs->get('feeds');
+            if ($pos < scalar @{$feeds}) {
+                if (@{$feeds}[$pos]->{'name'} eq $name) {
+                    $request->addResult("url", @{$feeds}[$pos]->{'value'});
                     $request->setStatusDone();
                 } else {
                     $request->setStatusBadParams();
