@@ -12,6 +12,7 @@
 7. Show other search options at end of search results.
 8. Intercept links on now-playing page and show a menu allowing to choose from
    following link or searching for item.
+9. Allow editing of podcast URL as well as name.
 
 1.8.9
 -----
